# rust-web-server-template

./: Cargo.toml  README.md  database.json
src/: code_template.rs  main.rs
